# application-notifier

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile_server  Dockerfile_timer  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_timer.txt
application_notifier/: cabinet_interface.py  functions.py  interfaces.py  main.py  responses.py  routers.py
server/: requirements.txt
server/src/: dependencies.py  functions.py  get_logger.py  main.py  responses.py  routers.py
src/: container.py  controllers.py  main.py  models.py  preimports.py  repositories.py
src/checker/: checker.py  database.py  main.py
src/clients/: cabinet_client.py  zulip_client.py
src/interfaces/: cabinet_interface.py  database.py  repositories.py  zulip_interface.py
src/models/: application.py  project.py
src/postgres/: application_repository.py  database.py  driver.py  postgres_queries.py  project_repository.py
src/server/: cabinet_interface.py  dependencies.py  routers.py
src/service/: application_service.py
src/web/: dependencies.py  response_texts.conf  routers.py
timer/: main.py  requirements.txt
timer/src/: cabinet_interface.py  formatting.py  functions.py  get_logger.py  main.py
