[tool.poetry]
name = "application-notifier"
version = "0.1.0"
description = ""
authors = ["Leon"]
readme = "README.md"
packages = [{include = "application_notifier"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.1"
pymongo = "^4.3.3"
python-dotenv = "^0.21.0"

[tool.poetry.group.server.dependencies]
fastapi = "^0.87.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
